tests/fixtures/invalid/pow_float_set_bool.py
# Cannot call pow() with Float, Set[int], Bool
x = pow(1.0, {1, 2, 3}, True)
